<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >	

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="50sp" />    
	
    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom = "true"
        android:orientation="horizontal"
        android:paddingBottom ="60dp">
        <Button
            android:id="@+id/buttonWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
	        android:drawableTop="@drawable/cancel"
            android:drawablePadding="2dp"
	        android:focusable="false"
	        android:enabled="false"
            android:text="@string/wifi" />

        <Button
            android:id="@+id/buttonMobileAp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
	        android:drawableTop="@drawable/cancel"
            android:drawablePadding="2dp"
	        android:focusable="false"
	        android:enabled="false"
            android:text="@string/mobile_ap" />

        <Button
            android:id="@+id/buttonWifiDirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
	        android:drawableTop="@drawable/cancel"
            android:drawablePadding="2dp"
	        android:focusable="false"
	        android:enabled="false"
            android:text="@string/wifi_direct" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom = "20dp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="20sp"
        android:layout_above = "@id/buttonLinearLayout"/>
</RelativeLayout>